--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.16.3",
     "jwt-simple": "^0.5.1",
     "passport": "^0.4.0",
+    "passport-http-bearer": "^1.0.1",
     "passport-local": "^1.0.0"
   }
 }
