--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "jwt-simple": "^0.5.1",
     "passport": "^0.4.0",
     "passport-http-bearer": "^1.0.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "uuid": "^3.3.2"
   }
 }
