--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Node Express Passport Session example",
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon --ignore sessions/ index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -21,6 +22,7 @@
     "passport": "^0.4.0",
     "passport-http-bearer": "^1.0.1",
     "passport-local": "^1.0.0",
+    "session-file-store": "^1.2.0",
     "uuid": "^3.3.2"
   }
 }
